# project-paths

./: .coveragerc  .gitignore  LICENSE  README.md  mypy.ini  project_paths.py  pyproject.toml
.github/workflows/: lint-and-test.yml
project_paths/: __init__.py  py.typed
tests/: conftest.py  test_auto_discovery.py  test_basic_api.py  test_basic_usage.py  test_module_import.py  test_pyproject_not_found.py  test_repr.py  test_unconventional_invocations.py
tests/a/: pyproject.toml  test_from_a.py
tests/b/: pyproject.toml  test_from_b.py
tests/empty_pyproject/: pyproject.toml  test_empty_pyproject.py
tests/problematic_names/: pyproject.toml  test_loading_problematic_names.py
