[tool.poetry]
name = "project-paths"
version = "0.1.0"
description = "Access file paths from pyproject.toml"
authors = ["Eddie Antonio Santos <eddieantonio@hey.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
mypy = "^0.790"
black = "^20.8b1"
pytest = "^6.2.1"

[tool.project-paths]
# NOTE: This key is used in tests cases!
tests = "tests/"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
