[tool.poetry]
name = "project-paths"
version = "1.1.1"
description = "Access file paths from pyproject.toml"
authors = ["Eddie Antonio Santos <eddieantonio@hey.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/eddieantonio/project-paths"
repository = "https://github.com/eddieantonio/project-paths"
keywords = ["pathlib", "pyproject.toml", "paths", "configuration"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
include = ["project_paths/py.typed"]

[tool.poetry.dependencies]
python = "^3.8"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
mypy = "^0.790"
black = "^20.8b1"
pytest = "^6.2.1"
pytest-cov = "^2.10.1"
coverage = {version = "^5.3.1", extras = ["toml"]}

[tool.project-paths]
# NOTE: This key is used in tests cases!
tests = "tests/"
absolute = "/bin"

[tool.coverage.run]
branch = true
source = ["project_paths"]

[tool.coverage.report]
omit = ["tests/*"]
exclude_lines = [
    # The default exclude pattern:
    "pragma: no cover",

    # an ellipses all alone on its own line:
    "^\\s*[.][.][.]\\s*$",

    # methods that are intended to be overridden in subclasses
    "raise NotImplementedError",
]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
